navbar cleanup -remove unnecassary elements -separate and clarify navbar css -make title link to home -fix alignment

--- a/src/static/app.css
+++ b/src/static/app.css
@@ -14,8 +14,6 @@ button {
   font-family: monospace;
   font-size: 20px;
   height: 30px;
-  margin: 10px;
-  padding: 5;
   text-align: center;
   vertical-align: middle;
 }
@@ -37,41 +35,11 @@ input {
   width: 100px;
 }
 
-li {
-  display: inline-block;
-}
-
-nav {
-  background-color: rgb(42, 42, 42);
-  box-shadow: 0 1px 20px black;
-  margin: auto;
-  padding: 10px;
-}
-
-ul {
-  list-style: none;
-  margin: 0;
-  padding: 0;
-}
-
 .login {
   display: block;
   float: right;
   margin: auto 0;
   text-align: center;
-}
-
-.nav-item-right {
-  display: block;
-  float: right;
-  text-align: center;
-}
-
-.title {
-  color: rgb(89, 136, 193);
-  font-size: 34px;
-  margin: 0;
-  padding: 0;
 }
 
 .text-center {
